# VRR_CMAKE_V2

./: .gitignore  CMakeLists.txt  ColorSpace.cu  ColorSpace.h  ColorSpace_original.cu  ComputeVelocity.cs.slang  EncodeDecode.cpp  EncodeDecode.h  EncodeDecode.rt.slang  EncodeDecode_dropjod.cpp  EncodeDecode_efficient_h265.cpp  EncodeDecode_experiment.cpp  EncodeDecode_experiment.h  EncodeDecode_experiment_v2  EncodeDecode_experiment_v2.cpp  EncodeDecode_experiment_v2.h  EncodeDecode_generate_reference.cpp  EncodeDecode_generate_reference.h  EncodeDecode_h265.cpp  EncodeDecode_h265.h  EncodeDecode_jitter.rt.slang  EncodeDecode_motion1.cpp  EncodeDecode_motion2.cpp  EncodeDecode_motion3.cpp  EncodeDecode_original.rt.slang  EncodeDecode_rafal.cpp  EncodeDecode_scene.cpp  EncodingSetting.h  FramePresenterD3D.h  FramePresenterD3D11.h  ScalarViterbi.cpp  ScalarViterbi.h  WindowsSecurityAttributes.h  encode_command.txt  experiment.h  experiment.sh  experiment_dropjod.h  experiment_non_experiment.sh  motion_30_720_5000.txt  pipeline.txt
